Funçoes de corridas adicionadas

--- a/public/css/tabela.css
+++ b/public/css/tabela.css
@@ -100,3 +100,17 @@
 .buttondelete:hover{
     background-color: rgb(255, 180, 180);
 }
+
+.buttonstatus{
+    width: 100px;
+    background-color: rgb(203, 255, 198);
+    border: 1px solid black;
+    border-radius: 5px;
+    color: black;
+    padding: 5px;
+    font-family: 'Montserrat' , sans-serif;
+    font-weight: bold;
+}
+.buttonstatus:hover{
+    background-color: rgb(184, 255, 166);
+}
