--- a/public/css/tabela.css
+++ b/public/css/tabela.css
@@ -114,3 +114,17 @@
 .buttonstatus:hover{
     background-color: rgb(184, 255, 166);
 }
+
+.buttonfinal{
+    width: 100px;
+    background-color: rgb(255, 253, 151);
+    border: 1px solid black;
+    border-radius: 5px;
+    color: black;
+    padding: 5px;
+    font-family: 'Montserrat' , sans-serif;
+    font-weight: bold;
+}
+.buttonfinal:hover{
+    background-color: rgb(255, 242, 56);
+}
