--- a/public/css/login.css
+++ b/public/css/login.css
@@ -66,13 +66,13 @@ body{
 .btn2{
     width: 100%;
     background: none;
+    border: 2px solid#afad4c;
     color: white;
-    border: 0px solid;
     padding: 5px;
-    font-size: 15px;
+    font-size: 18px;
     cursor: pointer;
-    margin: 5px 0;
+    margin: 12px 0px 0px 0px;
 }
 .btn2:hover{
-    color: rgb(251, 255, 0);
+    background-color: #afad4c67;
 }
