--- a/public/css/tabela.css
+++ b/public/css/tabela.css
@@ -128,3 +128,23 @@
 .buttonfinal:hover{
     background-color: rgb(255, 242, 56);
 }
+
+.btn2{
+    width: 250px;
+    background: none;
+    border: 2px solid#ffffff;
+    color: white;
+    padding: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 10px;
+}
+.btn2:hover{
+    background-color: #ffffff;
+    color: black;
+    border: 2px solid#000000;
+}
+
+.none:hover{
+    border: none;
+}
